--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,39 @@
-/.idea/
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
+
+# Inclusions
+# !lib/**
+
+# Compiled Files
+*.class
+bin/
+build/
+java/build/**
+
+# Test Files
+src/com/testmonitor/Main.java
+
+# Documentation
+javadoc/
+
+/src/com/testmonitor/main/Main.java
+/src/com/testmonitor/main/Main.java
