Change Parse into parse
Remove overloaded ProjectID methods in client

replace searchOrCreate in findOrCreate

Remove singular / plural attributes

Remove unused constructors

remove IML file

Ignor IML files

Ignore bin/

Remove unuses cnstructors

Add uri builder

Fix list-methods of all action classes

Update test suite actions

Update test run actions

Update test case actions

Update actions

Update actions

Update actions

Update actions

Update actions

Use Maven

Use Maven

Update some javadocs

Add mergeTestCases

Use a better Gitignore

Added a Contributing file

Added LICENSE

Added README

Use 'assign'

Fix maven script

Several updates, use strong typed dates, strict find & create

Several updates, use strong typed dates, strict find & create

Several updates, use strong typed dates, strict find & create

Update Exceptions

Update Exceptions

Update POM

Update javadoc

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,39 @@
-/.idea/
-/out/
-out/
-/src/com/testmonitor/Main.java
-/src/com/testmonitor/Main.class
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
+
+# Inclusions
+# !lib/**
+
+# Compiled Files
+*.class
+bin/
+build/
+java/build/**
+
+# Test Files
+src/com/testmonitor/Main.java
+
+# Documentation
+javadoc/
+
+/src/com/testmonitor/main/Main.java
+/src/com/testmonitor/main/Main.java
