--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.testmonitor.seleniumproject</groupId>
-	<artifactId>seleniumproject</artifactId>
+	<groupId>com.testmonitor.client</groupId>
+	<artifactId>TestMonitorClient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SeleniumProject</name>
+	<name>TestMonitorClient</name>
 
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
@@ -32,17 +32,6 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>AllTests.xml</suiteXmlFile>
-					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
