Several updates, use strong typed dates, strict find & create

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ src/com/testmonitor/Main.java
 # Documentation
 javadoc/
 
+/src/com/testmonitor/main/Main.java
+/src/com/testmonitor/main/Main.java
