--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.testmonitor</groupId>
     <artifactId>api-java-client</artifactId>
     <packaging>jar</packaging>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
 
     <name>TestMonitorClient</name>
     <description>TestMonitor API client</description>
